``` feat(helm): add development control switches and service configurations
- Add development environment control switches including disable_pms_check,
  disable_biz_domain_init, use_default_biz_domain, disable_audit_init,
  mock_mq_client, mock_sandbox_platform, mock_hydra, mock_authz,
  and mock_biz_domain options

- Add Swagger documentation configuration with enable_swagger and
  swagger_token settings

- Add dependency service configurations for rbac, intelli_qa, builder,
  auth, and agent_app services

- Add detailed sandbox platform configuration with public/private
  services, TTL settings, resource limits, and file upload config

- Update agent executor configuration with proper host and protocol
  settings

- Add logging and debugging configuration options

- Refactor service configuration structure in values.yaml to use
  camelCase naming convention for consistency

- Add comprehensive configuration sections with descriptive comments
```

--- a/agent-backend/deploy/helm/agent-backend/values.yaml
+++ b/agent-backend/deploy/helm/agent-backend/values.yaml
@@ -44,6 +44,29 @@ service:
   streamDiffFrequency: 5
   # 是否保留老的APP路径
   keep_legacy_app_path: true
+
+  # ========== 开发环境控制开关（生产环境建议设置为 false）==========
+  disablePmsCheck: false
+  disableBizDomainInit: false
+  useDefaultBizDomain: false
+  disableAuditInit: false
+  mockMqClient: false
+  mockSandboxPlatform: false
+  mockHydra: false
+  mockAuthz: false
+  mockBizDomain: false
+  # ========================================
+
+  # ========== Swagger 文档配置 ==========
+  enableSwagger: false
+  swaggerToken: ""
+  # ========================================
+
+  # ========== 日志和调试配置 ==========
+  logFile: "/var/log/agent-factory/agent-factory.log"
+  debug: false
+  debugHost: ""
+  # ========================================
   sessionAffinity: ClientIP
   sessionAffinityConfig:
     clientIP:
@@ -131,115 +154,136 @@ depServices:
     protocol: sasl_plaintext
     tenant: default
   modelFactory:
-    model_api_svc:
+    modelApiSvc:
       host: mf-model-api
       port: 9898
       protocol: http
-    model_manager_svc:
+    modelManagerSvc:
       host: mf-model-manager
       port: 9898
       protocol: http
     llm:
-      api_key: xxx
+      apiKey: xxx
   ecoIndex:
-    private_svc:
+    privateSvc:
       host: ecoindex-private
       port: 32130
       protocol: http
   datahubcentral:
-    private_svc:
+    privateSvc:
       host: datahubcentral-private
       port: 9002
       protocol: http
   authorization:
-    private_svc:
+    privateSvc:
       host: authorization-private
       port: 30920
       protocol: http
-    public_svc:
+    publicSvc:
       host: authorization-public
       port: 30920
       protocol: http
   agentFactory:
-    private_svc:
+    privateSvc:
       host: agent-factory
       port: 13020
       protocol: http
   bizDomain:
-    private_svc:
+    privateSvc:
       host: business-system-service
       port: 80
       protocol: http
+    publicSvc:
+      host: business-system-service
+      port: 80
+      protocol: http
+  # ========== 依赖服务配置 ==========
+  rbac:
+    host: kg-user-rbac
+    port: 6900
+  intelliQa:
+    host: intelli-qa
+    port: 8887
+  builder:
+    host: kg-builder
+    port: 6475
+  auth:
+    host: kg-data-auth
+    port: 7000
+  agentApp:
+    host: agent-app
+    port: 30778
+  # ========================================
   # APP 特有服务
   agentExecutor:
-    public_svc:
+    publicSvc:
       host: agent-executor-public
       port: 30778
       protocol: http
-    private_svc:
+    privateSvc:
       host: agent-executor
       port: 30778
       protocol: http
-    use_v2: true
+    useV2: true
   efast:
-    private_svc:
+    privateSvc:
       host: efast-private
       port: 9123
       protocol: http
-    public_svc:
+    publicSvc:
       host: efast-public
       port: 9123
       protocol: http
   docset:
-    public_svc:
+    publicSvc:
       host: docset-public
       port: 32596
       protocol: http
-    private_svc:
+    privateSvc:
       host: docset-private
       port: 32597
       protocol: http
   ecoconfig:
-    private_svc:
+    privateSvc:
       host: ecoconfig-private
       port: 32128
       protocol: http
-    public_svc:
+    publicSvc:
       host: ecoconfig-public
       port: 32127
       protocol: http
   uniquery:
-    public_svc:
+    publicSvc:
       host: mdl-uniquery-svc
       port: 13011
       protocol: http
-    private_svc:
+    privateSvc:
       host: mdl-uniquery-svc
       port: 13011
       protocol: http
   # ========== Sandbox Platform 配置 ==========
   sandboxPlatform:
-    public_svc:
+    publicSvc:
       host: sandbox-platform-public
       port: 8000
       protocol: http
-    private_svc:
+    privateSvc:
       host: sandbox-platform-private
       port: 8000
       protocol: http
-    default_ttl: 3600         # 默认 Session TTL（秒），最大 3600
-    max_retries: 10           # 等待 Session 就绪的最大重试次数
-    retry_interval: "500ms"   # 重试间隔
-    default_template_id: "python-basic"  # 默认模板 ID
-    default_cpu: "1"          # 默认 CPU 核心数
-    default_memory: "512Mi"   # 默认内存
-    default_disk: "1Gi"       # 默认磁盘
-    default_timeout: 300      # 默认超时时间（秒）
-    file_upload_config:
-      max_file_size: 10       # 最大文件大小（数值）
-      max_file_size_unit: "MB"  # 单位：KB/MB/GB
-      max_file_count: 10      # 最大文件数量
-      allowed_file_types:     # 允许的文件类型
+    defaultTtl: 3600         # 默认 Session TTL（秒），最大 3600
+    maxRetries: 10           # 等待 Session 就绪的最大重试次数
+    retryInterval: "500ms"   # 重试间隔
+    defaultTemplateId: "python-basic"  # 默认模板 ID
+    defaultCpu: "1"          # 默认 CPU 核心数
+    defaultMemory: "512Mi"   # 默认内存
+    defaultDisk: "1Gi"       # 默认磁盘
+    defaultTimeout: 300      # 默认超时时间（秒）
+    fileUploadConfig:
+      maxFileSize: 10        # 最大文件大小（数值）
+      maxFileSizeUnit: "MB"  # 单位：KB/MB/GB
+      maxFileCount: 10       # 最大文件数量
+      allowedFileTypes:      # 允许的文件类型
         - ".txt"
         - ".py"
         - ".js"
