feat(decision-agent): update kweaver-dolphin to version 0.2.1
- Upgrade kweaver-dolphin dependency from 0.2.0 to 0.2.1 in pyproject.toml
- Remove test.pypi installation of kweaver-dolphin in Dockerfile as it's now included in dependencies

--- a/agent-backend/agent-executor/pyproject.toml
+++ b/agent-backend/agent-executor/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "telemetrysdk-python@git+ssh://devops.aishu.cn:22/AISHUDevOps/One-Architecture/_git/TelemetrySDK-Python@2.6.1",
     #    "telemetrysdk-python@git+https://github.com/kweaver-ai/TelemetrySDK-Python@2.4.2",
     #    "tlogging",
-    #        "kweaver-dolphin==0.2.0",
+    "kweaver-dolphin==0.2.1",
 ]
 
 
